<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Map -->

    <!-- Bottom Sheet -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.Maps.MapsActivity" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/olivine_soft"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!-- Isi Bottom Sheet -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resultFor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/result_for"
                android:textAlignment="center"
                android:textColor="@color/dark_purple"
                android:textSize="18sp"
                android:textStyle="bold"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/olivine_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                map:layout_constraintStart_toEndOf="@id/resultFor"
                map:layout_constraintTop_toTopOf="parent"
                tools:text="Oreo" />

            <ImageView
                android:id="@+id/expand"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/expand"
                android:gravity="center"
                android:src="@drawable/ic_expand_24"
                map:layout_constraintBottom_toBottomOf="@+id/productName"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintTop_toTopOf="@+id/productName" />

            <!-- Bottom Sheet Content -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toBottomOf="@+id/resultFor">

                <ImageView
                    android:id="@+id/previewImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/olivine_dark"
                    android:contentDescription="@string/foto_toko" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/namaToko"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/nama_toko"
                android:textAlignment="textStart"
                android:textColor="@color/dark_purple"
                android:textSize="18sp"
                android:textStyle="bold"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/cardView2"
                map:layout_constraintTop_toTopOf="@+id/cardView2" />

            <TextView
                android:id="@+id/jarakToko"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:text="@string/_100_m"
                android:textAlignment="textStart"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="@+id/namaToko"
                map:layout_constraintTop_toBottomOf="@+id/namaToko" />

            <ImageView
                android:id="@+id/rute"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_route"
                android:gravity="center"
                android:src="@drawable/ic_directions_24"
                map:layout_constraintStart_toStartOf="@+id/jarakToko"
                map:layout_constraintTop_toBottomOf="@+id/jarakToko" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
